[package]
name = "ProcessHollowing_"
version = "0.1.0"
edition = "2024"

[dependencies]
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "memoryapi", "libloaderapi", "processthreadsapi", 
    "synchapi", "errhandlingapi", "handleapi", "basetsd", "ntdef", "winnt"] }
widestring = "1.0.2"
ntapi = "0.4.1"
anyhow = "1.0.100"